--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.20.1",
     "react-simply-carousel": "^9.0.7",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "timepicker-ui": "^2.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
